--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <nav class="nav">
+        <div class="container">
+            <div class="logo-nav">
+                <img src="./assets/img/logo_rectangle.png" alt="Rectangle" class="img-logo-nav" width="50" height="50">
+                <div class="logo-nav-right">
+                    <h2 class="logo-nav-h2">
+                        Bookoe
+                    </h2>
+                    <p class="logo-nav-sub">
+                        Bookstore website
+                    </p>
+                </div>
+            </div>
+            <div class="nav-search">
+                <form action="" method="GET">
+                    <select name="menu">
+                        <option value="select">
+                            Menus
+                        </option>
+                        <optgroup label="SMth">
+                            <option value="smth">
+                                Smth
+                            </option>
+                            <option value="smth">
+                                Smth
+                            </option>
+                        </optgroup>
+                        <optgroup label="SMth">
+                            <option value="smth">
+                                Smth
+                            </option>
+                            <option value="smth">
+                                Smth
+                            </option>
+                        </optgroup>
+                    </select>
+                    <label class="search-nav-label">
+                        <input type="search">
+                        <button type="submit" class="buton-seach">
+                            <img src="./assets/img/free-icon-magnifying-glass-search-16492.svg" alt="" width="20">
+                        </button>
+                    </label>
+                </form>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
